Simulate Ms. Pac-Man "blue maze bug"